--- a/example.html
+++ b/example.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script src="./testing-the-tester.js"></script>
-    <script src="./tic-tac-tester.js"></script>
+    <script type="text/javascript" src="./testing.js"></script>
+
+    <script type="text/javascript" src="./tic-tac-tester.js"></script>
 </head>
 <body>
 </body>
