Add game history

--- a/example.html
+++ b/example.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <script type="text/javascript" src="./testing.js"></script>
+    <script type="text/javascript" src="./testing0.js"></script>
 
     <script type="text/javascript" src="./tic-tac-tester.js"></script>
 </head>
