simplify jquery quote

--- a/example.html
+++ b/example.html
@@ -9,7 +9,8 @@
 </head>
 <body>
   <header>
-    <h1>Tic Tac Toe</h1>
+
+    <h1> <img src="image/logo.png">Tic Tac Toe</h1>
   </header>
 
   <div class="container">
@@ -19,6 +20,7 @@
     </aside>
 
     <div class="board cursor-cross">
+      <div id="grid-0" class="grid"></div>
       <div id="grid-1" class="grid"></div>
       <div id="grid-2" class="grid"></div>
       <div id="grid-3" class="grid"></div>
@@ -27,7 +29,6 @@
       <div id="grid-6" class="grid"></div>
       <div id="grid-7" class="grid"></div>
       <div id="grid-8" class="grid"></div>
-      <div id="grid-9" class="grid"></div>
     </div>
 
     <aside id="player-2">
@@ -38,6 +39,7 @@
   </div>
 
   <div id="restart-game">Play Again</div>
+  <div id="msgbox">egjegjpe</div>
 
   <footer>&copy; Lee Yi Sheng</footer>
 
